Recompiled 01-rstudio-intro.html & 02-data-structures-part1.html

--- a/02-data-structures-part1.html
+++ b/02-data-structures-part1.html
@@ -36,7 +36,7 @@
 <ul>
 <li>To become familiar with the different types of data</li>
 <li>To understand the different basic data structures commonly encountered in R</li>
-<li>To use R functions to extract the type, class, and structure of an R object.</li>
+<li>To use R built in functions to extract the type, class, and structure of an R object.</li>
 </ul>
 </div>
 </section>
@@ -258,7 +258,7 @@ x</code></pre></div>
 <h4 id="challenge-4"><span class="glyphicon glyphicon-pencil"></span>Challenge 4</h4>
 </div>
 <div class="panel-body">
-<p>Make another matrix, this time containing the numbers 1:50, with 5 columns and 10 rows. Did the <code>matrix</code> function fill your matrix by column, or by row, as its default behaviour? See if you can figure out how to change this. (hint: read the documentation for <code>matrix</code>!)</p>
+<p>Make another matrix, this time containing the numbers from 1 to 50, with 5 columns and 10 rows. Did the <code>matrix</code> function fill your matrix by column, or by row, as its default behaviour? See if you can figure out how to change this by reading the documentation for <a href="https://stat.ethz.ch/R-manual/R-devel/library/base/html/matrix.html">matrix</a></p>
 </div>
 </section>
 <h4 id="factors">Factors</h4>
