--- a/index.html
+++ b/index.html
@@ -45,18 +45,15 @@
 <ol style="list-style-type: decimal">
 <li><a href="01-rstudio-intro.html">Introduction to R and RStudio</a></li>
 <li><a href="02-data-structures-part1.html">Data types and structures</a></li>
-<li><a href="03-data-structures-part2.html">Data structures: data frames</a></li>
-<li><a href="04-seeking-help.html">Seeking help</a></li>
-<li><a href="05-project-intro.html">Project Management</a></li>
-<li><a href="06-data-subsetting.html">Subsetting data</a></li>
-<li><a href="07-functions.html">Functions</a></li>
-<li><a href="08-plot-ggplot2.html">Plotting</a></li>
-<li><a href="09-vectorisation.html">Vectorisation</a></li>
-<li><a href="10-control-flow.html">Control flow</a></li>
-<li><a href="11-writing-data.html">Writing data</a></li>
-<li><a href="12-plyr.html">Split-apply-combine</a></li>
-<li><a href="13-wrap-up.html">Wrapping up</a></li>
+<li><a href="03-seeking-help.html">Seeking help</a></li>
+<li><a href="04-project-intro.html">Project Management</a></li>
+<li><a href="05-data-analysis.html">Data Analysis: using data frames</a></li>
+<li><a href="06-functions.html">Functions</a></li>
+<li><a href="07-vectorisation.html">Vectorisation</a></li>
+<li><a href="08-control-flow.html">Control flow</a></li>
+<li><a href="09-plyr.html">Split-apply-combine</a></li>
 </ol>
+<p>[//]: # 13. <a href="13-wrap-up.html">Wrapping up</a></p>
 <h2 id="other-resources">Other Resources</h2>
 <ul>
 <li><a href="reference.html">Reference</a></li>
