--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 <li><a href="08-control-flow.html">Control flow</a></li>
 <li><a href="09-plyr.html">Split-apply-combine</a></li>
 </ol>
-<p>[//]: # 13. <a href="13-wrap-up.html">Wrapping up</a></p>
+<!---
+# 13. [Wrapping up](13-wrap-up.html)
+-->
 <h2 id="other-resources">Other Resources</h2>
 <ul>
 <li><a href="reference.html">Reference</a></li>
