Corrected typos - regenerated 03-seeking-help.html

--- a/03-seeking-help.html
+++ b/03-seeking-help.html
@@ -37,7 +37,7 @@
 <li>To know where to look for help.</li>
 <li>To become familiar with R help files for functions and special operators.</li>
 <li>To be able to use CRAN task views to identify packages to solve a problem.</li>
-<li>To be able to seek help from your peers</li>
+<li>To be able to seek help from your peers.</li>
 </ul>
 </div>
 </section>
