Edited & regenerated 04-project-intro.html

--- a/04-project-intro.html
+++ b/04-project-intro.html
@@ -81,7 +81,7 @@ that has been used to generate it;
 <li>Click the “File” menu button, then “New Project”.</li>
 <li>Click “New Directory”.</li>
 <li>Click “Empty Project”.</li>
-<li>Type in the name of the directory to store your project, e.g. “my_project”.</li>
+<li>Type in the name of the directory to store your project, e.g. “test_project”.</li>
 <li>Make sure that the checkbox for “Create a git repository” is selected.</li>
 <li>Click the “Create Project” button.</li>
 </ol>
@@ -188,7 +188,7 @@ one to store the analysis scripts.
 <div class="panel-body">
 <ol style="list-style-type: decimal">
 <li><p>Modify the <code>.gitignore</code> file to contain <code>data/</code> so that the data folder isn’t versioned.</p></li>
-<li><p>Stage and commit the .gitignore and <project name>.Rproj files using the R git interface.</p></li>
+<li><p>Stage and commit the <code>.gitignore</code> and <code>test_project.Rproj</code> files using the R git interface.</p></li>
 </ol>
 </div>
 </section>
