Edited 06-func-R.html in index.md - regenerated index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <li><a href="03-seeking-help.html">Seeking help</a></li>
 <li><a href="04-project-intro.html">Project Management</a></li>
 <li><a href="05-data-analysis.html">Data Analysis: using data frames</a></li>
-<li><a href="06-functions.html">Functions</a></li>
+<li><a href="06-func-R.html">Functions</a></li>
 <li><a href="07-vectorisation.html">Vectorisation</a></li>
 <li><a href="08-control-flow.html">Control flow</a></li>
 <li><a href="09-plyr.html">Split-apply-combine</a></li>
