--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
 <h2 id="other-resources">Other Resources</h2>
 <ul>
 <li><a href="reference.html">Reference</a></li>
-<li><a href="discussion.html">Discussion</a></li>
-<li><a href="instructors.html">Instructor’s Guide</a></li>
 </ul>
+<!---
+
+*   [Discussion](discussion.html)
+*   [Instructor's Guide](instructors.html)
+
+-->
         </div>
       </div>
       </article>
