Added the 08-best-practices-R.html in the list

--- a/index.html
+++ b/index.html
@@ -49,15 +49,12 @@
 <li><a href="04-project-intro.html">Project Management</a></li>
 <li><a href="05-data-analysis.html">Data Analysis: using data frames</a></li>
 <li><a href="06-func-R.html">Functions</a></li>
+<li><a href="07-plyr.html">Split-apply-combine</a></li>
+<li><a href="08-best-practices-R.html">Best practices in R</a></li>
 </ol>
 <!---
 7.  [Vectorisation](07-vectorisation.html)
 8.  [Control flow](08-control-flow.html)
--->
-<ol start="7" style="list-style-type: decimal">
-<li><a href="07-plyr.html">Split-apply-combine</a></li>
-</ol>
-<!---
 # 13. [Wrapping up](13-wrap-up.html)
 -->
 <h2 id="other-resources">Other Resources</h2>
@@ -65,10 +62,8 @@
 <li><a href="reference.html">Reference</a></li>
 </ul>
 <!---
-
 *   [Discussion](discussion.html)
 *   [Instructor's Guide](instructors.html)
-
 -->
         </div>
       </div>
