Edited challenge 1 and 2 by adding quotes around the variable names

--- a/01-rstudio-intro.html
+++ b/01-rstudio-intro.html
@@ -326,7 +326,7 @@ age &lt;-<span class="st"> </span>age -<span class="st"> </span><span class="dv"
 <h4 id="challenge-2"><span class="glyphicon glyphicon-pencil"></span>Challenge 2</h4>
 </div>
 <div class="panel-body">
-<p>Run the code from the previous challenge, and write a command to compare mass to age. Is mass larger than age? Do the same for mass2. Is this larger than age?</p>
+<p>Run the code from the previous challenge, and write a command to compare <code>mass</code> to <code>age</code>. Is <code>mass</code> larger than <code>age</code>? Do the same for <code>mass2</code>. Is this larger than <code>age</code>?</p>
 </div>
 </section>
 <section class="challenge panel panel-success">
@@ -334,7 +334,7 @@ age &lt;-<span class="st"> </span>age -<span class="st"> </span><span class="dv"
 <h4 id="challenge-3"><span class="glyphicon glyphicon-pencil"></span>Challenge 3</h4>
 </div>
 <div class="panel-body">
-<p>Clean up your working environment by deleting the mass and age variables.</p>
+<p>Clean up your working environment by deleting the <code>mass</code> and <code>age</code> variables.</p>
 </div>
 </section>
         </div>
