--- a/04-project-intro.html
+++ b/04-project-intro.html
@@ -169,9 +169,11 @@ one to store the analysis scripts.
 <li><p>On the bottom right panel click the <code>New Folder</code> button.</p></li>
 <li><p>In the popup window type the name of the new folder.</p></li>
 </ol>
-<p>To download the gapminder data from <a href="http://tinyurl.com/gapminder-FiveYearData-csv">this link</a>, you would have typically used the <code>wget</code> function in the shell. In that case the command would be: <code>wget http://tinyurl.com/gapminder-FiveYearData-csv</code> To run a shell command in R we can use the <code>system</code> function. Look at the arguments of the command in the help page and then: 1. Use the R function <code>system</code> to run the shell command wget from the link above. To save the file under the recently created <code>data</code> folder, add the following flag <code>--output-document=data/gapminder-FiveYearData.csv</code> to the above <code>wget</code> function.</p>
-<ol start="2" style="list-style-type: decimal">
-<li>Click on the data folder (bottom right panel) to check if a new file exists.</li>
+<p>To download the gapminder data from <a href="http://tinyurl.com/gapminder-FiveYearData-csv">this link</a>, you would have typically used the <code>wget</code> function in the shell. In that case the command would be: <code>wget http://tinyurl.com/gapminder-FiveYearData-csv</code>.</p>
+<p>To run a shell command in R we can use the <code>system</code> function. Look at the arguments of the command in the help page and then:</p>
+<ol style="list-style-type: decimal">
+<li><p>Use the R function <code>system</code> to run the shell command wget from the link above. To save the file under the recently created <code>data</code> folder, add the following flag <code>--output-document=data/gapminder-FiveYearData.csv</code> to the above <code>wget</code> function.</p></li>
+<li><p>Click on the data folder (bottom right panel) to check if a new file exists.</p></li>
 </ol>
 <p>We will load, inspect and analyse these data later.</p>
 </div>
